Added genres page
